ASC-1082 Add Test for Glance NFS Backend
Add a task file for configuring an NFS export on the deployment host. Also,
add test that verifies that an OpenStack administrator can change the backend
of Glance to NFS.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,3 +19,4 @@
 - import_tasks: network_setup.yml
 - import_tasks: server_setup.yml
 - import_tasks: volume_setup.yml
+- import_tasks: setup_nfs_server.yml
